# mcp-skill-hub

./: .env.example  .gitignore  2025-10_DEV_TO_ARTICLE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_REGISTRY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASING.md  STATUS.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml  server.json
.github/: QUICK_FIX.md  SETUP.md  VERSION_SYNC.md
.github/workflows/: publish-mcp-registry.yml  release.yml
examples/: claude-config.json  claude_desktop_config.json
examples/skills/advanced-example/: SKILL.md
examples/skills/advanced-example/examples/: example1.py  example2.txt
examples/skills/advanced-example/templates/: template.txt
examples/skills/intermediate-example/: SKILL.md
examples/skills/intermediate-example/examples/: demo.py
examples/skills/minimal-example/: SKILL.md
src/mcp_skills/: __init__.py  __main__.py  config.py  scanner.py  server.py  utils.py  watcher.py
src/mcp_skills/models/: __init__.py  skill.py
src/mcp_skills/parsers/: __init__.py  base.py  markdown.py
src/mcp_skills/storage/: __init__.py  repository.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_main.py  test_models.py  test_parsers.py  test_repository.py  test_scanner.py  test_server.py  test_structure.py  test_utils.py  test_watcher.py
